2007-07-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: use g_open() to open the file.
	Should fix filename encoding problems on Win32 (bug #461449).

2007-07-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: also calculate the checksum when loading
	the RGB profile from disk (bug #456017).

2007-07-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/jigsaw.c: applied patch from Aurimas Juška
	that changes the Jigsaw plug-in to use a GimpAspectPreview instead
	of a GimpZoomPreview (bug #356716).

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* tools/Makefile.am (test_clipboard_SOURCES)
	* libgimpthumb/Makefile.am (gimp_thumbnail_list_SOURCES): fixed
	typos: SURCES -> SOURCES.

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-quality.c (jpeg_detect_quality): simplify the
	formula so that it returns a slightly lower estimated quality when
	there is no exact match with the IJG quantization tables.

2007-07-27  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: factored out utility
	function gimp_display_shell_update_focus() which sets the active
	tool into the proper state after the canvas received focus.

	(gimp_display_shell_canvas_tool_events): use it here instead of
	duplicating the code 3 times.

	(gimp_display_shell_ruler_button_press): use it here too so the
	move and color tools don't do weird things in click-to-focus
	mode (when FOCUS_IN is delivered after BUTTON_PRESS).

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg.[ch]
	* plug-ins/jpeg/jpeg-save.c (save_dialog): Make the "Save XMP
	data" checkbox insensitive if there is no XMP packet to save.

2007-07-26  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/Makefile.am
	* plug-ins/jpeg/jpeg-quality.[ch]
	* plug-ins/jpeg/jpeg-settings.[ch]: new files including functions
	for detecting the quality setting of existing JPEG files by