@@ -1,5 +1,10 @@
 2007-07-29  Sven Neumann  <sven@gimp.org>
 
+	* app/file/file-open.c
+	* app/plug-in/plug-in-icc-profile.c: minor cleanups.
+
+2007-07-29  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/tiff-load.c
 	* plug-ins/common/tiff-save.c: use g_open() to open the file.
 	Should fix filename encoding problems on Win32 (bug #461449).
